typescript/checker/tests/conformance/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration5.ts.stderr
error: Expected Semi, got Some(Word(public))
 --> $DIR/tests/conformance/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration5.ts:2:24
  |
2 |    [a: string]: number public v: number
  |                        ^^^^^^

